<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/scroll_no_effects"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/gl_left"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/instr_questions_1" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/instr_questions_1_1" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/instr_questions_2" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/instr_questions_3" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/instr_questions_4" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_images"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_center2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/iv_left"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_human_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/gl_center2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/blue" />

                <ImageView
                    android:id="@+id/iv_right"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_human_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/gl_center2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/dark_orange" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:weightSum="1">

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/instr_questions_maria"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/instr_questions_juan"
                    android:textColor="@color/dark_orange"
                    android:textStyle="bold" />

            </LinearLayout>

            <include
                android:id="@+id/example_slider"
                layout="@layout/include_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/instr_questions_6" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/instr_questions_7" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/instr_questions_8" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/instr_questions_8_1" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/instr_questions_9" />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instr_questions_11" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>