<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alphazet"
        android:text="@string/selector_questions"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/background_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white_box"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TextView
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/questions_welcome" />

        <TextView
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/questions_welcome_three_extra" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:text="@string/questions_welcome_you_are" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_player_one" />

        </LinearLayout>

        <TextView
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/questions_welcome_you_move_white" />

        <TextView
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/questions_welcome_four" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_human_down"
                app:tint="@color/blue" />

            <EditText
                android:id="@+id/et_player_blue"
                style="@style/MediumTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints="null"
                android:background="@drawable/bg_white_box_border_grey"
                android:gravity="start|center"
                android:hint="@string/name_blue"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue_hint"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_human_down"
                app:tint="@color/dark_orange" />

            <EditText
                android:id="@+id/et_player_orange"
                style="@style/MediumTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints="null"
                android:background="@drawable/bg_white_box_border_grey"
                android:gravity="start|center"
                android:hint="@string/name_orange"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@color/dark_orange"
                android:textColorHint="@color/orange_hint"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <include
            android:id="@+id/btn_start"
            layout="@layout/include_button_black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <include
            android:id="@+id/btn_instructions"
            layout="@layout/include_button_black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>