<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alphazet"
        android:text="@string/selector_questions"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/background_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white_box"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TextView
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/questions_welcome" />

        <TextView
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/questions_welcome_three_extra" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:text="@string/questions_welcome_you_are" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_player_two" />

        </LinearLayout>

        <TextView
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/questions_welcome_you_move_red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_white_box"
            android:backgroundTint="@color/grey"
            android:orientation="vertical"
            android:paddingBottom="6dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginBottom="-4dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_triangle_pointing"
                app:layout_constraintBottom_toTopOf="@id/rl_slider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:tint="@color/dark_red" />

            <View
                android:layout_width="8dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:alpha="0.75"
                android:background="@color/dark_red" />

        </LinearLayout>

        <include
            android:id="@+id/btn_start"
            layout="@layout/include_button_black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <include
            android:id="@+id/btn_instructions"
            layout="@layout/include_button_black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>