<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:clipChildren="false"
    android:clipToPadding="false">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_box"
        android:backgroundTint="@color/background_black"
        android:paddingVertical="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/MediumTextView_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/exit"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_top">

        <TextView
            style="@style/SmallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:gravity="start"
            android:text="@string/exit_text_1" />

        <TextView
            style="@style/SmallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/exit_text_2" />

        <include
            android:id="@+id/btn_exit"
            layout="@layout/include_button_black" />

        <TextView
            android:id="@+id/btn_stay"
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/click_effect"
            android:backgroundTint="@color/transparent"
            android:gravity="center"
            android:paddingHorizontal="36dp"
            android:paddingVertical="8dp"
            android:text="@string/stay"
            android:textAllCaps="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>